updated contact page

--- a/achievement.html
+++ b/achievement.html
@@ -121,7 +121,7 @@
 								<hr>
 							</div>
 						</div>
-						<div class="row badges">
+						<div class="row badges" align="center">
 							<div class="col-md-4">
 								<div class="content">
 									<a href="https://www.youracclaim.com/users/ankit-kesarwani/badges" target="_blank">
@@ -156,7 +156,7 @@
 								</div>
 							</div>
 						</div></br>
-						<div class="row badges">
+						<div class="row badges"  align="center">
 							<div class="col-md-4">
 								<div class="content">
 									<a href="https://www.youracclaim.com/users/ankit-kesarwani/badges" target="_blank">
