--- a/index.html
+++ b/index.html
@@ -102,7 +102,8 @@
 										<div class="about-desc">
 											<h2>About Me</h2>
 											<hr>
-											<p>I'm a recent Bachelor of Technology (Computer Science & Engineering) graduate from Indian Institute of Information Technology, Design & Manufacturing Jabalpur.</br>I an experienced in Java, Spring Boot, CouchDB, Jenkins, Docker, Cognos BI product. </br>I am very passionate about new technologies, technology for me is magic to play with and watch. </br>My specialty is design and development. My interests, however, extend beyond the development and I love helping people with designing and developing. I even love makings new things. When I'm not free, I'm probably being entertained by funny videos, watching cricket, playing games or messing around with something inspired by Sundar Pichai. </p>
+											<p>I'm a recent Bachelor of Technology (Computer Science & Engineering) graduate from Indian Institute of Information Technology, Design & Manufacturing Jabalpur.</br>I am experienced in Java, Spring Boot, CouchDB, Jenkins, Docker, Cognos BI product. </br>I am very passionate about new technologies, technology for me is magic to play with and watch. </br>My specialty is design and development. My interests, however, extend beyond the development and I love helping people with designing and developing. I even love makings new things. When I'm free, I'm probably being entertained by funny videos, watching cricket, playing games or messing around with something inspired by Sundar Pichai.</p>
+											<p>You can find my resume <a href="https://drive.google.com/file/d/18Ac-KE53M7yejzUdblG3lnUHg45OV72j/view?usp=sharing" target="_blank">here</a>.</p>
 										</div>
 									</div>
 								</div>
