Updated index.html page and added extra badges

--- a/achievement.html
+++ b/achievement.html
@@ -121,6 +121,115 @@
 								<hr>
 							</div>
 						</div>
+
+						<div class="row badges" align="center">
+							<div class="col-md-4">
+								<div class="content">
+									<a href="https://www.youracclaim.com/users/ankit-kesarwani/badges" target="_blank">
+										<div class="content-overlay"></div>
+										<img class="content-image" src="badges/ibm-agile-explorer.png">
+										<div class="content-details fadeIn-bottom">
+											<p class="content-text">IBM Agile Explorer</p>
+										</div>
+									</a>
+								</div>
+							</div>
+							<div class="col-md-4">
+								<div class="content">
+									<a href="https://www.youracclaim.com/users/ankit-kesarwani/badges" target="_blank">
+										<div class="content-overlay"></div>
+										<img class="content-image" src="badges/enterprise-design-thinking-practitioner.png">
+										<div class="content-details fadeIn-bottom">
+											<p class="content-text">Enterprise Design Thinking Practitioner</p>
+										</div>
+									</a>
+								</div>
+							</div>
+							<div class="col-md-4">
+								<div class="content">
+									<a href="https://www.youracclaim.com/users/ankit-kesarwani/badges" target="_blank">
+										<div class="content-overlay"></div>
+										<img class="content-image" src="badges/microservices-fundamentals.png">
+										<div class="content-details fadeIn-bottom">
+											<p class="content-text">Microservices Fundamentals</p>
+										</div>
+									</a>
+								</div>
+							</div>
+						</div></br>
+
+						<div class="row badges" align="center">
+							<div class="col-md-4">
+								<div class="content">
+									<a href="https://www.youracclaim.com/users/ankit-kesarwani/badges" target="_blank">
+										<div class="content-overlay"></div>
+										<img class="content-image" src="badges/developing-and-deploying-microservices-with-microclimate.png">
+										<div class="content-details fadeIn-bottom">
+											<p class="content-text">Developing and Deploying Microservices with Microclimate</p>
+										</div>
+									</a>
+								</div>
+							</div>
+							<div class="col-md-4">
+								<div class="content">
+									<a href="https://www.youracclaim.com/users/ankit-kesarwani/badges" target="_blank">
+										<div class="content-overlay"></div>
+										<img class="content-image" src="badges/deploying-microservices-with-kubernetes.png">
+										<div class="content-details fadeIn-bottom">
+											<p class="content-text">Deploying Microservices with Kubernetes</p>
+										</div>
+									</a>
+								</div>
+							</div>
+							<div class="col-md-4">
+								<div class="content">
+									<a href="https://www.youracclaim.com/users/ankit-kesarwani/badges" target="_blank">
+										<div class="content-overlay"></div>
+										<img class="content-image" src="badges/ibm-cloud-private-deploying-microservices-with-kubernetes.png">
+										<div class="content-details fadeIn-bottom">
+											<p class="content-text">IBM Cloud Private: Deploying Microservices with Kubernetes</p>
+										</div>
+									</a>
+								</div>
+							</div>
+						</div></br>
+
+						<div class="row badges" align="center">
+							<div class="col-md-4">
+								<div class="content">
+									<a href="https://google.qwiklabs.com/public_profiles/41a3812a-b84b-4dfd-93b1-9c0f0d193125" target="_blank">
+										<div class="content-overlay"></div>
+										<img class="content-image" src="badges/Kubernetes-in-the-Google-Cloud.png">
+										<div class="content-details fadeIn-bottom">
+											<p class="content-text">Google Cloud Platform: Kubernetes in the Google Cloud</p>
+										</div>
+									</a>
+								</div>
+							</div>
+							<div class="col-md-4">
+								<div class="content">
+									<a href="https://google.qwiklabs.com/public_profiles/41a3812a-b84b-4dfd-93b1-9c0f0d193125" target="_blank">
+										<div class="content-overlay"></div>
+										<img class="content-image" src="badges/cloud-architecture.png">
+										<div class="content-details fadeIn-bottom">
+											<p class="content-text">Google Cloud Platform: Cloud Architecture</p>
+										</div>
+									</a>
+								</div>
+							</div>
+							<div class="col-md-4">
+								<div class="content">
+									<a href="https://google.qwiklabs.com/public_profiles/41a3812a-b84b-4dfd-93b1-9c0f0d193125" target="_blank">
+										<div class="content-overlay"></div>
+										<img class="content-image" src="badges/baseline-infrastructure.png">
+										<div class="content-details fadeIn-bottom">
+											<p class="content-text">Google Cloud Platform: Baseline: Infrastructure</p>
+										</div>
+									</a>
+								</div>
+							</div>
+						</div></br>
+
 						<div class="row badges" align="center">
 							<div class="col-md-4">
 								<div class="content">
