--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
 											<h2>About Me</h2>
 											<hr>
 											<p>Skilled Full Stack Developer having hands-on experience with several tools and technologies and Third-party APIs, also have excellent debugging skills and ability to learn new technologies quickly.</p>
-											<p>During my undergraduate studies, I did 6 internships which kick-started my career. I have gained alot of exposure while working with saveral startups and MNCs as an intern. Currently, I am working with IBM India Software Labs as Full Stack Developer with IBM Cognitive Engagement - Watson Supply Chain software group.</p>
+											<p>During my undergraduate studies, I did 6 internships which kick-started my career. I have gained alot of exposure while working with several startups and MNCs as an intern. Currently, I am working with IBM India Software Labs as Full Stack Developer with IBM Cognitive Engagement - Watson Supply Chain software group.</p>
 											<p>With my reach technical background, I am passionate about solving new and challenging real-world problems across all domains in Computer Science.</p>
 											<p>You can find my resume <a href="https://drive.google.com/open?id=18Ac-KE53M7yejzUdblG3lnUHg45OV72j" target="_blank">here</a>.</p>
 										</div>
