--- a/experience.html
+++ b/experience.html
@@ -103,23 +103,24 @@
 							<div class="col-md-12">
 								<div class="exp-heading animate-box" data-animate-effect="fadeInLeft">
 									<div class="exp-img" style="background-image: url(logo/ibm.png);"></div>
-									<h2>Full Stack Developer</h2>
+									<h2>Software Development Engineer</h2>
 									<h3>IBM India Software Labs</h3>
 									<span>July 2019 - Present</span></br>
 									<span>Bengaluru, India</span></br></br>
-									<p>• Implementing REST API that supports trading partners to create multiple locations/routes that would be processed by internal micro-services in SCBN 2.0 network.</p>
-									<p>• Deploying vert.x based micro-service using Docker to a remote Kubernetes cluster.</p>
+									<p>• Contributing to the development of APIs to enable Trading Partners to send or receive files via SFTP protocol.</p>
+									<p>• Implemented Various Data Models to define Customers / Trading Partners in Supply Chain Business Network.</p>
+									<p>• Proposed a single click On-boarding flow to minimize the work for a Service Person in order to on-board Customers/Trading Partners in SCBN.</p>
 								</div><hr>
 								<div class="exp-heading animate-box" data-animate-effect="fadeInLeft">
 									<div class="exp-img" style="background-image: url(logo/linkedin.png);"></div>
 									<h2>Campus Editor</h2>
 									<h3>LinkedIn</h3>
-									<span>December 2018 - Present</span></br>
+									<span>December 2018 - February 2020</span></br>
 									<span>India</span></br></br>
 									<p>LinkedIn Campus Editors are the one chosen by LinkedIn India for its Campus Editor Programme to enhance opportunities in LinkedIn's 500+ million member network.</p>
-									<p>• Helping peers to understand the effective use of Linkedin by doing one on one session with them.</p>
-									<p>• Encouraging students to share their knowledge by writing blogs/articles.</p>
-									<p>• Helping students get the opportunity they are capable of.</p>
+									<p>• Helped peers to understand the effective use of Linkedin by doing one on one session with them.</p>
+									<p>• Encouraged students to share their knowledge by writing blogs/articles.</p>
+									<p>• Helped students get the opportunity they are capable of.</p>
 								</div><hr>
 								<div class="exp-heading animate-box" data-animate-effect="fadeInRight">
 									<div class="exp-img" style="background-image: url(logo/bobble.jpeg);"></div>
